# pyintegrate

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.rst  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml  manual_pypi_publish.yml  pr.yml
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst  integrate.rst
examples/: daemonized_ws.py  data.py  gtt_orders.py  margins.py  orders.py  ws.py
integrate/: __init__.py  connect.py  data.py  orders.py  ws.py
tests/: responses_helper.py
tests/integration/: conftest.py  connect_test.py  data_test.py  orders_test.py  test_connect.py  test_data.py  test_orders.py  test_ws.py  ws_test.py
tests/mock_responses/: cancel_gtt_order.json  cancel_oco_order.json  cancel_order.json  gtt_orders.json  historical.csv  holdings.json  limits.json  login_step_1.json  login_step_2.json  margins.json  modify_gtt_order.json  modify_oco_order.json  modify_order.json  order.json  orders.json  place_gtt_order.json  place_oco_order.json  place_order.json  positions.json  quotes.json  security_information.json  slice_order.json  span_calculator.json  trades.json
tests/unit/: conftest.py  connect_test.py  data_test.py  orders_test.py  test_connect.py  test_data.py  test_orders.py  test_ws.py  ws_test.py
